# Learning-Cpp

./: README.md
1-Linear_Regression_in_C++/: linear-reg-data.csv  linear-regression.cpp  linear_regression.h  main.cpp  output.csv  readme.md  visualisation.ipynb
2-Multi-Variate-Linear-Regression-in-C++/: MultiVariate-Linear-Regression.cpp  data.csv  predictions.txt
3-Patterns/N-by-2-forest/: a.out  n-2-forest.cpp
3-Patterns/alpha-hill/: a.out  alpha_hill.cpp
3-Patterns/alpha-ramp/: a.out  alpha-ramp.cpp
3-Patterns/alpha-triangle/: a.out  alpha-triangle.cpp
3-Patterns/binary-number-triangle/: a.out  binary-triangle.cpp
3-Patterns/increasing-letter-triangle/: a.out  inc_letter_triangle.cpp
3-Patterns/increasing-number-triangle/: a.out  inc_num_triangle.cpp
3-Patterns/n-forest/: a.out  n-forest.cpp
3-Patterns/n-star-diamond/: a.out  n_star.cpp
3-Patterns/n-triangles/: a.out  n-triangles.cpp
3-Patterns/ninja-number-pattern/: a.out  number_pattern.cpp
3-Patterns/ninja-star-pattern/: ninja-pattern.cpp
3-Patterns/number-crown/: a.out  number_crown.cpp
3-Patterns/reverse-letter-triangle/: a.out  reverse-letter-triangle.cpp
3-Patterns/reverse-number-triangle/: a.out  rev-num-triangle.cpp
3-Patterns/reverse-star-triangle/: a.out  reverse-triangle.cpp
3-Patterns/rotated-triangle/: a.out  rotated_triangle.cpp
3-Patterns/seeding/: a.out  (+1 more)
4-Particle-Simulation/: CMakeLists.txt  readme.md  version_check.cpp
4-Particle-Simulation/src/: Particle.cpp  Particle.h  ParticleSimulation.cpp  ParticleSimulation.h  main.cpp
5-Circle-Collisions/: main.cpp
(+8 files in other folders)
